# simcc-admin

./: .container.env  .env.container  .env.exemple  .env.postgres  .gitignore  Dockerfile  app.py  compose.build.yaml  compose.yaml  docker-compose.yml  index.html  init.data.sql  init.sql  pesquisadores.CSV  pyproject.toml  requiriments.txt  w.json  xpto  xpto.cpp
.github/workflows/: deploy-conectee.yaml
adm_simcc/: __init__.py  app.py  config.py
adm_simcc/dao/: __init__.py  dao_area.py  dao_conectee.py  dao_departament.py  dao_graduate_program.py  dao_graduate_program_researcher.py  dao_graduate_program_student.py  dao_guidnace_tracking.py  dao_ind_prod.py  dao_institution.py  dao_researcher.py  dao_researcher_group.py  dao_system.py  dao_tag.py  dao_teacher.py  dao_technician.py
adm_simcc/dao/models/: departament.py  graduate_program.py  graduate_program_resarcher.py  researcher_group.py  student.py  teachers.py  technician.py  weight.py
adm_simcc/models/: __init__.py  departament.py  graduate_program.py  graduate_program_resarcher.py  institution.py  researcher.py  student.py  teachers.py  technician.py  weight.py
adm_simcc/rest/: area.py  conectee.py  guidance_tracking.py  rest_departament.py  rest_graduate_program.py  rest_graduate_program_student.py  rest_gradute_program_researcher.py  rest_ind_prod.py  rest_institution.py  rest_newsletter.py  rest_researcher.py  rest_researcher_group.py  rest_system_management.py  rest_teacher.py  rest_technician.py  tag.py
files/: institutions.json  researcher.xlsx
pipeline/: MPUBA25.03.2025.xlsx  UFSB.xlsx  dados_UFRB.xlsx  getByCPF.py
scripts/: database.sql  maintenance.py  researchers.py  xpto.py
simcc/: app.py  config.py  exceptions.py  security.py
simcc/core/: cache_connection.py  connection.py  database.py
simcc/models/: institution_model.py  rbac_model.py  researcher_model.py  user_model.py  user_models.py
simcc/models/features/: chat_model.py  collection_models.py  notification_models.py
simcc/repositories/: group_repository.py  institution_repository.py  rbac_repository.py  researcher_repository.py  user_repository.py
simcc/repositories/features/: chat_repository.py  collection_repositoy.py  notification_repository.py  star_repository.py
simcc/routers/: auth.py  institution.py  keys.py  rbac.py  researcher.py  users.py
simcc/routers/departament/: uploads.py
simcc/routers/features/: chat.py  collection.py  notification.py  star.py
simcc/routers/features/collection/: collection.py  upload.py
simcc/routers/group/: group.py  upload.py
simcc/routers/institution/: institution.py  uploads.py
simcc/routers/program/: program.py  upload.py
simcc/routers/users/: uploads.py  users.py
simcc/schemas/: group_schemas.py  institution_model.py  rbac_model.py  user_model.py
simcc/schemas/features/: chat_schema.py  star_models.py
simcc/services/: group_service.py  institution_service.py  rbac_service.py  researcher_service.py  user_service.py
simcc/services/features/: chat_service.py  collection_service.py  notification_service.py  star_service.py
tests/: conftest.py  test_auth.py  test_chat.py  test_collection.py  test_group.py  test_institution.py  test_notification.py  test_program.py  test_rbac.py  test_researcher.py  test_star.py  test_user.py
tests/factories/: group_factory.py  institution_factory.py  program_factory.py  rbac_factory.py  researcher_factory.py  user_factory.py
tests/factories/features/: collection_factory.py  notification_factory.py  star_factory.py
tests/test_features/: test_chat.py  test_collection.py  test_notification.py
