[project]
name = "simcc-admin"
version = "2.0"
description = ""
authors = [
    {name = "meirelesgc",email = "geu_costa@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.13,<0.116.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "psycopg[pool] (>=3.2.9,<4.0.0)",
    "pwdlib[argon2] (>=0.2.1,<0.3.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "testcontainers[postgres] (>=4.10.0,<5.0.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "google-auth[requests] (>=2.40.3,<3.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "redis[async] (>=6.2.0,<7.0.0)",
    "fakeredis (>=2.30.1,<3.0.0)",
]

[tool.poetry]
packages = [{ include = "simcc" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
taskipy = "^1.14.1"
ruff = "^0.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.settings]
use_vars = true

[tool.taskipy.variables]
src_dir = "src"

[tool.taskipy.tasks]
format = 'ruff check --fix; ruff format'
run = 'fastapi dev simcc/app.py'
test = 'PROD=false pytest -s -x -vv --cov=simcc'
cov = 'coverage html'
debug = 'task format; pytest -s -x --cov=simcc -vv --lf'